fix TESB-15081 and sync trun.bat with karaf 4